Pulling baseline model results

--- a/notebooks/pod.ipynb
+++ b/notebooks/pod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "14a1c702-c858-4d2a-9994-ee7fbace2da5",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "1a9f55a5-8146-455a-8916-94837d53bb5e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "SPLITSDIR  = CONFIGS['filepaths']['splits']      \n",
     "MODELDIR   = CONFIGS['filepaths']['models']    \n",
     "PREDSDIR   = CONFIGS['filepaths']['predictions']  \n",
-    "MODELS     = CONFIGS['models']\n",
+    "MODELS     = CONFIGS['experiments']\n",
     "SPLIT      = 'valid'\n",
     "PRTHRESH   = 0.01\n",
     "LANDTHRESH = 0.5\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "f65a9fde-5d9c-4050-b320-a973b2d32af1",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "b93edf21-2777-4896-a357-20200564bcd9",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "d4b0843f-bf5b-4cc3-a94d-d9d0d3f6d67f",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "a7af1d9b-a5cc-4ac4-bd1f-4c69757353af",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "fd577fc9-d6d9-4ec4-978d-f02e05e33c17",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "1be66836-f3ff-49bb-b0b2-237a52d9a392",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "5638b6e7-0143-428d-b7c6-908adc89dd74",
    "metadata": {},
    "outputs": [
