--- a/notebooks/nn.ipynb
+++ b/notebooks/nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "14a1c702-c858-4d2a-9994-ee7fbace2da5",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "id": "3957ee96-580d-4ec5-b6dd-475536876b3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.3758200191636361"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value = 0\n",
+    "mean  = 0.1292700618505478\n",
+    "std   = 0.343968003988266\n",
+    "\n",
+    "newvalue = (np.log1p(value)-mean)/std\n",
+    "newvalue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "1a9f55a5-8146-455a-8916-94837d53bb5e",
    "metadata": {},
    "outputs": [],
@@ -29,12 +55,20 @@
     "SPLITSDIR  = CONFIGS['filepaths']['splits']      \n",
     "MODELDIR   = CONFIGS['filepaths']['models']    \n",
     "PREDSDIR   = CONFIGS['filepaths']['predictions']  \n",
-    "MODELS     = CONFIGS['models']\n",
+    "MODELS     = CONFIGS['experiments']\n",
     "SPLIT      = 'valid'\n",
     "PRTHRESH   = 0.01\n",
     "LANDTHRESH = 0.5\n",
     "landfrac   = xr.open_dataarray('/global/cfs/cdirs/m4334/sferrett/monsoon-discovery/data/interim/lf.nc')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d0769a2-71c3-4137-bd1e-92297b093c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
